--- a/templates/routes.html
+++ b/templates/routes.html
@@ -15,15 +15,15 @@
     </div>
 </div>
 
-<!-- Modals -->
+<!-- 模态框 -->
 <div id="card_modal" class="modal">
     <div class="modal-content">
         <h4 id="modal_title"></h4>
         <p id="modal_content"></p>
     </div>
     <div class="modal-footer">
-        <a href="#!" id="modal_confirm" class="hide">Confirm</a>
-        <a href="#!" class="modal-close btn-flat">Cancel</a>
+        <a href="#!" id="modal_confirm" class="hide">确认</a>
+        <a href="#!" class="modal-close btn-flat">取消</a>
     </div>
 </div>
         
