--- a/templates/users_card.html
+++ b/templates/users_card.html
@@ -11,23 +11,23 @@
         <ul class="collection">
             <li class="collection-item avatar">
                 <i class="material-icons circle">settings</i>
-                <span class="title">User Actions</span>
+                <span class="title">用户操作</span>
                 <p class="hide-on-small-only">
                     <a 
                         href="#card_modal" 
                         id="{{user_id}}-rename-user-lg"  
                         onclick="load_modal_rename_user( {{user_id}}, '{{user_name}}' )" 
                         class="modal-trigger waves-effect waves-light btn-small tooltipped"
-                        data-tooltip="Rename this user.">
-                        Rename
+                        data-tooltip="重命名该用户。">
+                        重命名
                     </a>
                     <a 
                         href="#card_modal" 
                         id="{{user_id}}-remove-user-lg"  
                         onclick="load_modal_delete_user( {{user_id}}, '{{user_name}}' )" 
                         class="modal-trigger red waves-effect waves-light btn-small tooltipped" 
-                        data-tooltip="Remove this user.">
-                        Delete
+                        data-tooltip="删除该用户。">
+                        删除
                     </a>
                 </p>
                 <p class="show-on-small hide-on-med-and-up hide-on-large-only hide-on-med-only">
@@ -38,8 +38,8 @@
                             id="{{user_id}}-rename-user-sm"  
                             onclick="load_modal_rename_user( {{user_id}}, '{{user_name}}' )" 
                             class="modal-trigger waves-effect waves-light btn-small tooltipped"
-                            data-tooltip="Rename this user.">
-                                Rename
+                            data-tooltip="重命名该用户。">
+                                重命名
                             </a>
                         </li>
                         <li>
@@ -48,8 +48,8 @@
                             id="{{user_id}}-remove-user-sm"  
                             onclick="load_modal_delete_user( {{user_id}}, '{{user_name}}' )" 
                             class="modal-trigger red waves-effect waves-light btn-small tooltipped" 
-                            data-tooltip="Remove this user.">
-                                Delete
+                            data-tooltip="删除该用户。">
+                                删除
                             </a>
                         </li>
                     </ul>
