--- a/templates/machines.html
+++ b/templates/machines.html
@@ -17,31 +17,31 @@
     </div>
 </div>
 
-<!-- Modals -->
+<!-- 模态框 -->
 <div id="card_modal" class="modal">
     <div class="modal-content">
         <h4 id="modal_title"></h4>
         <p id="modal_content"></p>
     </div>
     <div class="modal-footer">
-        <a href="#!" id="modal_confirm" class="hide">Confirm</a>
-        <a href="#!" class="modal-close btn-flat">Cancel</a>
+        <a href="#!" id="modal_confirm" class="hide">确认</a>
+        <a href="#!" class="modal-close btn-flat">取消</a>
     </div>
 </div>
 
-<!-- Add new machine modal -->
+<!-- 添加新机器的模态框 -->
 <div id="new_machine_card_modal" class="modal">
     <div class="modal-content">
-        <h4 id="new_machine_modal_title">Add machine to Headscale</h4>
+        <h4 id="new_machine_modal_title">将机器添加到Headscale</h4>
         <p id="new_machine_modal_content">
             <div class="row">
                 <div class="col s12">
                     <ul class="tabs" id="new_machine_tabs">
                         <li class="tab col s4" id="default_tab" onclick="btn_toggle('show')">
-                            <a href="#default">Default</a>
+                            <a href="#default">默认</a>
                         </li>
                         <li class="tab col s4" id="preauth_tab" onclick="btn_toggle('hide')">
-                            <a href="#preauth">PreAuth Keys</a>
+                            <a href="#preauth">预授权密钥</a>
                         </li>
                         <li class="tab col s4" id="oidc_tab"    onclick="btn_toggle('hide')">
                             <a href="#oidc"   >OIDC        </a>
@@ -52,42 +52,42 @@
                     <ul class="collection">
                         <li class="collection-item avatar">
                             <i class="material-icons circle">devices</i>
-                            <span class="title">Information</span>
-                            <p>Install Tailscale on your client.  To use your headscale server, use the flag <code>--login-server={{ headscale_server }}</code></p>
+                            <span class="title">信息</span>
+                            <p>在客户端上安装Tailscale。要使用您的headscale服务器，请使用标志<code>--login-server={{ headscale_server }}</code></p>
                         </li>
                     </ul>
                     <div id="default_add_new_machine_modal">
-                    <!-- Display a field for the key and a dropdown for the user
-                         done in JavaScript (load_modal_add_machine) -->
+                    <!-- 使用JavaScript显示密钥字段和用户下拉菜单
+                         由load_modal_add_machine函数完成 -->
                     </div>
                 </div>
                 <div id="preauth" class="col s12">
                     <ul class='browser-default'>
-                        <li>Preauth Keys provide the capability to install tailscale using a pre-registered key (see the <code>--authkey</code> flag in the <a href="https://tailscale.com/kb/1080/cli/">tailscale command line documentation</a>)</li>
-                        <li>Preauth Keys are especially useful for deploying headscale as an always-on VPN (see the <a href="https://tailscale.com/kb/1189/install-windows-msi/">TS_UNATTENDEDMODE install option in the tailscale documentation</a>) or router-level VPN.</li>
-                        <li>Preauth Keys can be managed on the <a href="users">Users</a> page.</li>
+                        <li>预授权密钥提供使用预注册密钥安装tailscale的功能（请参阅<a href="https://tailscale.com/kb/1080/cli/">tailscale命令行文档</a>中的<code>--authkey</code>标志）</li>
+                        <li>预授权密钥在部署headscale作为常开VPN（请参阅tailscale文档中的<a href="https://tailscale.com/kb/1189/install-windows-msi/">TS_UNATTENDEDMODE安装选项</a>）或路由器级VPN时特别有用。</li>
+                        <li>预授权密钥可以在<a href="users">用户</a>页面上管理。</li>
                     </ul>
                 </div>
                 <div id="oidc" class="col s12">
                     <ul class='browser-default'>
-                        <li>OIDC provides the ability to register an external authentication provider (such as <a href="https://www.keycloak.org/">Keycloak</a> or <a href="https://www.authelia.com/">Authelia</a>) machines to headscale.</li>
-                        <li>Configure Headscale to register with an authentication provider by adding the OIDC configuration to your Headscale "config.yml" file described <a href="https://github.com/juanfont/headscale/blob/main/config-example.yaml">here</a>.</li>
+                        <li>OIDC提供了将外部身份验证提供程序（如<a href="https://www.keycloak.org/">Keycloak</a>或<a href="https://www.authelia.com/">Authelia</a>）的机器注册到headscale的能力。</li>
+                        <li>通过将OIDC配置添加到Headscale的"config.yml"文件中（详见<a href="https://github.com/juanfont/headscale/blob/main/config-example.yaml">这里</a>），配置Headscale以向身份验证提供程序注册。</li>
                     </ul>
                 </div>
             </div>
         </p>
     </div>
     <div class="modal-footer">
-        <a href="#!" id="new_machine_modal_confirm" class="green btn-flat white-text" onclick="add_machine()">Add Machine</a>
-        <a href="#!" class="modal-close btn-flat">Cancel</a>
+        <a href="#!" id="new_machine_modal_confirm" class="green btn-flat white-text" onclick="add_machine()">添加机器</a>
+        <a href="#!" class="modal-close btn-flat">取消</a>
     </div>
 </div>
-<!-- FAB for adding new machines -->
+<!-- 用于添加新机器的浮动操作按钮 -->
 <div class="fixed-action-btn">
     <a href="#new_machine_card_modal" 
        onclick='load_modal_add_machine()' 
        class="modal-trigger waves-effect waves-light btn-floating btn-large tooltipped {{ COLOR_BTN }}"
-       data-tooltip="Add a new machine to the Tailnet" data-position="left">
+       data-tooltip="向Tailnet添加新机器" data-position="left">
         <i class="large material-icons">add</i>
     </a>
 </div>
