--- a/templates/template.html
+++ b/templates/template.html
@@ -1,59 +1,59 @@
-  <!DOCTYPE html>
-  <html id="page">
-     <head>
-        <title>●::[●●] {% block title %} {% endblock %}</title>
+<!DOCTYPE html>
+<html id="page">
+   <head>
+      <title>●::[●●] {% block title %} {% endblock %}</title>
 
-        <link rel="apple-touch-icon" sizes="57x57" href="static/img/favicon/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="static/img/favicon/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="static/img/favicon/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="static/img/favicon/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="static/img/favicon/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="static/img/favicon/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="static/img/favicon/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="static/img/favicon/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicon/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="static/img/favicon/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="static/img/favicon/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon/favicon-16x16.png">
-        <link rel="manifest" href="static/img/favicon/manifest.json">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
+      <link rel="apple-touch-icon" sizes="57x57" href="static/img/favicon/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="static/img/favicon/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="static/img/favicon/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="static/img/favicon/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="static/img/favicon/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="static/img/favicon/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="static/img/favicon/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="static/img/favicon/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicon/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="static/img/favicon/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="static/img/favicon/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon/favicon-16x16.png">
+      <link rel="manifest" href="static/img/favicon/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <!-- CSS and Icons -->
-        <link href="static/css/materialize.min.css" type="text/css" rel="stylesheet"/> 
-        <link href="static/css/overrides.css"   type="text/css" rel="stylesheet"/>
-        <style>
-         /* fallback */
-            @font-face {
-               font-family: 'Material Icons';
-               font-style: normal;
-               font-weight: 400;
-               src: url(static/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
-            }
-            
-            .material-icons {
-               font-family: 'Material Icons';
-               font-weight: normal;
-               font-style: normal;
-               font-size: 24px;
-               line-height: 1;
-               letter-spacing: normal;
-               text-transform: none;
-               display: inline-block;
-               white-space: nowrap;
-               word-wrap: normal;
-               direction: ltr;
-               -moz-font-feature-settings: 'liga';
-               -font-feature-settings: 'liga';
-               -moz-osx-font-smoothing: grayscale;
-            }
-        </style>
-     </head>
-     <body>
-        <nav>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <!-- CSS and Icons -->
+      <link href="static/css/materialize.min.css" type="text/css" rel="stylesheet"/> 
+      <link href="static/css/overrides.css"   type="text/css" rel="stylesheet"/>
+      <style>
+       /* fallback */
+          @font-face {
+             font-family: 'Material Icons';
+             font-style: normal;
+             font-weight: 400;
+             src: url(static/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+          }
+          
+          .material-icons {
+             font-family: 'Material Icons';
+             font-weight: normal;
+             font-style: normal;
+             font-size: 24px;
+             line-height: 1;
+             letter-spacing: normal;
+             text-transform: none;
+             display: inline-block;
+             white-space: nowrap;
+             word-wrap: normal;
+             direction: ltr;
+             -moz-font-feature-settings: 'liga';
+             -font-feature-settings: 'liga';
+             -moz-osx-font-smoothing: grayscale;
+          }
+      </style>
+   </head>
+   <body>
+      <nav>
          <div class="nav-wrapper {{ COLOR_NAV }}">
            <div id="nav-search" class="nav-search hidden">
             <form>
@@ -77,19 +77,19 @@
             <a href="#!" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 {% block INPAGE_SEARCH %}{% endblock %}
-                <li role="menu-item" class="tooltipped {{ overview_active   }}" data-position="bottom" data-tooltip="Overview">
+                <li role="menu-item" class="tooltipped {{ overview_active   }}" data-position="bottom" data-tooltip="概览">
                    <a href="overview"><i class="material-icons">map</i></a>
                 </li>
-                <li role="menu-item" class="tooltipped {{ routes_active   }}" data-position="bottom" data-tooltip="Routes">
+                <li role="menu-item" class="tooltipped {{ routes_active   }}" data-position="bottom" data-tooltip="路由">
                    <a href="routes"><i class="material-icons">alt_route</i></a>
                 </li>
-                <li role="menu-item" class="tooltipped {{ machines_active    }}" data-position="bottom" data-tooltip="Machines">
+                <li role="menu-item" class="tooltipped {{ machines_active    }}" data-position="bottom" data-tooltip="设备">
                    <a href="machines"><i class="material-icons">devices</i></a>
                 </li>
-                <li role="menu-item" class="tooltipped {{ users_active }}" data-position="bottom" data-tooltip="Users">
+                <li role="menu-item" class="tooltipped {{ users_active }}" data-position="bottom" data-tooltip="用户">
                    <a href="users"><i class="material-icons">people</i></a>
                 </li>
-                <li role="menu-item" class="tooltipped {{ settings_active   }}" data-position="bottom" data-tooltip="Settings">
+                <li role="menu-item" class="tooltipped {{ settings_active   }}" data-position="bottom" data-tooltip="设置">
                    <a href="settings"><i class="material-icons">settings</i></a>
                 </li>
                 {% block OIDC_NAV_DROPDOWN %}{% endblock %}
@@ -98,11 +98,11 @@
          </div>
        </nav>
        <ul class="sidenav" id="mobile">
-         <li><a href="overview"><i class="material-icons left">map</i>Overview</a></li>
-         <li><a href="routes"><i class="material-icons left">alt_route</i>Routes</a></li>
-         <li><a href="machines"><i class="material-icons left">devices</i>Machines</a></li>
-         <li><a href="users"><i class="material-icons left">people</i>Users</a></li>
-         <li><a href="settings"><i class="material-icons left">settings</i>Settings</a></li>
+         <li><a href="overview"><i class="material-icons left">map</i>概览</a></li>
+         <li><a href="routes"><i class="material-icons left">alt_route</i>路由</a></li>
+         <li><a href="machines"><i class="material-icons left">devices</i>设备</a></li>
+         <li><a href="users"><i class="material-icons left">people</i>用户</a></li>
+         <li><a href="settings"><i class="material-icons left">settings</i>设置</a></li>
          {% block OIDC_NAV_MOBILE %}{% endblock %}
       </ul>
       <div class="container">
@@ -115,7 +115,7 @@
          <p id="generic_modal_content"></p>
       </div>
       <div class="modal-footer">
-         <a href="#!" class="modal-close btn-flat">Cancel</a>
+         <a href="#!" class="modal-close btn-flat">取消</a>
       </div>
    </div>
    </body>
