--- a/templates/users.html
+++ b/templates/users.html
@@ -23,35 +23,35 @@
         <p id="modal_content"></p>
     </div>
     <div class="modal-footer">
-        <a href="#!" id="modal_confirm" class="hide">Confirm</a>
-        <a href="#!" class="modal-close btn-flat">Cancel</a>
+        <a href="#!" id="modal_confirm" class="hide">确认</a>
+        <a href="#!" class="modal-close btn-flat">取消</a>
     </div>
 </div>
 
 <!-- Add new user modal -->
 <div id="new_user_card_modal" class="modal">
     <div class="modal-content">
-        <h4 id="new_user_modal_title">Add a new User</h4>
+        <h4 id="new_user_modal_title">添加新用户</h4>
         <p id="new_user_modal_content">
             <div class="col s12 m6">
                 <div class="input-field">
                     <i class="material-icons prefix">language</i>
                     <input id="add_user_name_field" type="text">
-                    <label for="add_user_name_field">User Name</label>
+                    <label for="add_user_name_field">用户名</label>
                 </div>
             </div>
         </p>
     </div>
     <div class="modal-footer">
-        <a href="#!" id="new_user_modal_confirm" class="green btn-flat white-text" onclick="add_user()">Add User</a>
-        <a href="#!" class="modal-close btn-flat">Cancel</a>
+        <a href="#!" id="new_user_modal_confirm" class="green btn-flat white-text" onclick="add_user()">添加用户</a>
+        <a href="#!" class="modal-close btn-flat">取消</a>
     </div>
 </div>
 <!-- FAB for adding new users -->
 <div class="fixed-action-btn">
     <a href="#new_user_card_modal" 
        class="modal-trigger waves-effect waves-light btn-floating btn-large red tooltipped {{ COLOR_BTN }}"
-       data-tooltip="Add a new user to the Tailnet" data-position="left">
+       data-tooltip="向Tailnet添加新用户" data-position="left">
         <i class="large material-icons">add</i>
     </a>
 </div>
