--- a/templates/template.html
+++ b/templates/template.html
@@ -67,7 +67,7 @@
            <div id="nav-content" class="nav-content">
             <img class="hide-on-med-and-down" style="padding-left: 10px" src="static/img/headscale3-dots.png" height="64px"></img>
             <a href="overview" class="brand-logo bold" style="padding-left: 10px">
-                Headscale
+                管理后台
                 <div class="right">
                    <span class="left-align thin hide-on-small-only" style="padding-left: 10px">
                       {% block header %}{% endblock %}
