更新 settings.html

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -38,11 +38,11 @@
             <tbody>
               <tr><td>兼容性</td><td><a href="https://github.com/juanfont/headscale">Headscale {{ HS_VERSION }}</a></td></tr>
               <tr><td>应用版本</td><td>{{ APP_VERSION }}</td></tr>
-              <tr><td>汉化</td><td>帅帅的南山</td></tr>
               <tr><td>构建日期</td><td> {{ BUILD_DATE }}</td></tr>
               <tr><td>Git 提交</td><td>{{ GIT_COMMIT }}</td></tr>
               <tr><td>Git 分支</td><td>{{ GIT_BRANCH }}</td></tr>
               <tr><td>源代码</td><td><a href="https://github.com/iFargle/headscale-webui">Github</a></td></tr>
+              <tr><td>汉化支持</td><td>闲鱼APP:帅帅的南山</td></tr>
             </tbody>
           </table>
         </div>
